Popup info pane.

--- a/src/theme/styles.scss
+++ b/src/theme/styles.scss
@@ -136,6 +136,10 @@
 body {
     margin: 0;
     font-family: var(--default-font-family);
+
+    &.no-scroll {
+        overflow: hidden;
+    }
 }
 
 a,
