--- a/src/workspace.scss
+++ b/src/workspace.scss
@@ -38,8 +38,7 @@
 
     @media only screen and (min-width: 600px) {
         display: grid;
-        grid-template-areas: "main info";
-        grid-template-columns: 1fr 300px;
+        grid-template-areas: "main splitter info";
         height: calc(100vh - var(--app-header-height));
 
         .main-pane {
@@ -47,10 +46,24 @@
             overflow-y: scroll;
         }
 
+        .splitter {
+            grid-area: splitter;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: col-resize;
+            user-select: none;
+
+            .line {
+                width: 2px;
+                height: 100%;
+                background: #e0e0e0;
+            }
+        }
+
         .info-pane {
             grid-area: info;
             overflow-y: scroll;
-            border-left: 1px solid skyblue;
         }
 
         .footer {
