--- a/src/workspace.scss
+++ b/src/workspace.scss
@@ -59,6 +59,10 @@
                 height: 100%;
                 background: #e0e0e0;
             }
+
+            &.hide {
+                display: none;
+            }
         }
 
         .info-pane {
