--- a/src/app/workspace.scss
+++ b/src/app/workspace.scss
@@ -4,15 +4,27 @@
     margin-top: var(--app-header-height);
 
     @media only screen and (max-width: 599px) {
+        .popup-overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100vh;
+            background: rgba(0, 0, 0, 0.5);
+        }
+
         .info-pane {
             &.popup {
                 position: fixed;
                 bottom: 0;
-                height: 66.67%;
-                width: 100%;
+                width: calc(100% - 20px);
+                height: calc(100vh - var(--app-header-height) + 15px);
                 z-index: 1;
-                background: beige;
+                background: white;
                 overflow-y: scroll;
+                margin: 0 10px;
+                border-top-left-radius: 10px;
+                border-top-right-radius: 10px;
             }
         }
     }
