--- a/src/components/close-button.scss
+++ b/src/components/close-button.scss
@@ -1,12 +1,16 @@
 .close-button {
     border-radius: 25px;
     transition: border-color 300ms;
-    width: 50px;
-    height: 50px;
     border: 1px solid #e5e5e5;
     cursor: pointer;
 
     &:hover {
         border: 1px solid #a9a9a9;
+    }
+
+    svg {
+        width: 50px;
+        height: 50px;
+        color: black;
     }
 }
