Restructure word-by-word modules, use indeterminate progress bar + load word morphology.

--- a/src/components/indeterminate-progress-bar.scss
+++ b/src/components/indeterminate-progress-bar.scss
@@ -1,13 +1,13 @@
 .indeterminate-progress-bar {
     height: 4px;
-    background-color: rgba(5, 114, 206, 0.2);
+    background-color: #bad1ed;
     width: 100%;
     overflow: hidden;
 
     .highlight {
         width: 100%;
         height: 100%;
-        background-color: rgb(5, 114, 206);
+        background-color: #3073c5;
         animation: highlightAnimation 1s infinite linear;
         transform-origin: 0% 50%;
     }
@@ -19,10 +19,10 @@
     }
 
     40% {
-        transform: translateX(0) scaleX(0.4);
+        transform: translateX(0) scaleX(0.2);
     }
 
     100% {
-        transform: translateX(100%) scaleX(0.5);
+        transform: translateX(100%) scaleX(0.3);
     }
 }
