--- a/src/word-morphology/word-morphology-view.scss
+++ b/src/word-morphology/word-morphology-view.scss
@@ -1,7 +1,26 @@
 .word-morphology-view {
-    margin: 25px;
 
-    .header {
+    header {
         display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 5px;
+
+        h1 {
+            margin: 0 0 0 15;
+            font-size: 1em;
+        }
+    }
+
+    section {
+        margin: 0 20 20 20;
+    }
+
+    @media only screen and (max-width: 599px) {
+
+        header,
+        section {
+            font-size: 90%;
+        }
     }
 }
