--- a/src/word-morphology/tagged-token.scss
+++ b/src/word-morphology/tagged-token.scss
@@ -2,4 +2,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    .pos-tags {
+        display: flex;
+        gap: 25px;
+    }
 }
