--- a/src/treebank/irab-view.scss
+++ b/src/treebank/irab-view.scss
@@ -1,9 +1,10 @@
 .irab-view {
 
-    h3 {
+    h1 {
+        font-size: 1em;
         text-align: right;
         padding-right: 25px;
-        margin-top: 35px;
+        margin-top: 25px;
     }
 
     ul {
