--- a/src/word-morphology/tagged-token.scss
+++ b/src/word-morphology/tagged-token.scss
@@ -3,8 +3,19 @@
     flex-direction: column;
     align-items: center;
 
+    .arabic-token {
+        margin-top: 10px;
+        margin-bottom: 2px;
+    }
+
     .pos-tags {
         display: flex;
         gap: 25px;
+    }
+
+    @media only screen and (max-width: 599px) {
+        .arabic-token {
+            font-size: var(--arabic-font-size-medium);
+        }
     }
 }
