--- a/src/word-morphology/word-morphology-view.scss
+++ b/src/word-morphology/word-morphology-view.scss
@@ -47,6 +47,16 @@
         section {
             font-size: 90%;
         }
+
+        section {
+            .descriptions {
+                .segment {
+                    .node-circle {
+                        margin-top: 8px;
+                    }
+                }
+            }
+        }
     }
 
     @media only screen and (min-width: 600px) {
